helm-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager
  namespace: taskmanager
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: api.sagarchauhan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskmanager-service
                port:
                  number: 80
